finance_api/infrastructure/kubernetes-deployment.yaml
#Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: finance-api
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: finance-api-service
  namespace: finance-api
spec:
  type: ClusterIP
  selector:
    app: finance-api
  ports:
    - port: 8000
      targetPort: 80
---

#GatewayClass
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: contour
spec:
  controllerName: projectcontour.io/gateway-controller
---

#Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: finance-api-gateway
  namespace: finance-api
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
---

#HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: finance-api-http-route
  namespace: finance-api
spec:
  parentRefs:
    - name: finance-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: finance-api-service
          port: 8000
          weight: 100
---

#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-api
  namespace: finance-api
spec:
  selector:
    matchLabels:
      app: finance-api
  replicas: 1
  template:
    metadata:
      labels:
        app: finance-api
    spec:
      containers:
        - name: finance-api
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/app.conf
              subPath: app.conf
              readOnly: true
            - name: nginx-content
              mountPath: /usr/share/nginx/html/demo.html
              subPath: demo.html
              readOnly: true
      volumes:
        - name: nginx-content
          configMap:
            name: nginx-content
            items:
              - key: demo.html
                path: demo.html
        - name: nginx-config
          configMap:
            name: nginx-config
